tests/cases/parser/literals/byte_literals/empty.stderr
error: character literals may only contain one codepoint
 --> $DIR/empty.hash:3:2
2 |   
3 |   b'';
  |    ^^ here
  = help: if you meant to write a string literal, use `"` instead
