tests/cases/parser/literals/byte_literals/empty.hash
// run=fail, stage=parse

b'';
